DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Activities_in_Free_Time__c.field-meta.xml
<CustomField>
    <fullName>Activities_in_Free_Time__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning and Hunter Central Coast</description>
    <inlineHelpText>What do you enjoy doing in your free time?</inlineHelpText>
    <label>Activities in Free Time?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>