DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Avaliable_Resources__c.field-meta.xml
<CustomField>
    <fullName>Avaliable_Resources__c</fullName>
    <description>Used in the intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Avaliable Resources</inlineHelpText>
    <label>Avaliable Resources</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>