DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Barriers_to_securing_accommodation__c.field-meta.xml
<CustomField>
    <fullName>Barriers_to_securing_accommodation__c</fullName>
    <label>Barriers to securing accommodation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordability</fullName>
            </value>
            <value>
                <fullName>Applying but not getting approved</fullName>
            </value>
            <value>
                <fullName>Disability and requires additional support transport</fullName>
            </value>
            <value>
                <fullName>Complex AOD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>IT Literacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>