DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Do_you_currently_have_phone_credit__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_have_phone_credit__c</fullName>
    <label>Do you currently have phone credit?</label>
    <type>TextArea</type>
</CustomField>