DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Do_you_have_any_of_the_following__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_of_the_following__c</fullName>
    <label>Do you have any of the following?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicare Card</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s Licence</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Bank Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>