DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Engagement_and_reliability__c.field-meta.xml
<CustomField>
    <fullName>Engagement_and_reliability__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Engagement and reliability</inlineHelpText>
    <label>Engagement and reliability</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>