DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Family_Relationship_Details__c.field-meta.xml
<CustomField>
    <fullName>Family_Relationship_Details__c</fullName>
    <description>Field created for Care Connect intake process, used in the Intake: Care Connect flow</description>
    <inlineHelpText>Are there any other family or friends it would be helpful for us to know about?</inlineHelpText>
    <label>Family &amp; Relationship Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>