DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Foreseeable_Changes__c.field-meta.xml
<CustomField>
    <fullName>Foreseeable_Changes__c</fullName>
    <description>Used in the intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Foreseeable Changes</inlineHelpText>
    <label>Foreseeable Changes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>