DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Impulsivity_self_control__c.field-meta.xml
<CustomField>
    <fullName>Impulsivity_self_control__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Impulsivity/self control (incl. substance use)</inlineHelpText>
    <label>Impulsivity/self control</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>