DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Long_term_risk_factors__c.field-meta.xml
<CustomField>
    <fullName>Long_term_risk_factors__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Long term risk factors</inlineHelpText>
    <label>Long term risk factors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>