DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Next_of_Kin_Details__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin_Details__c</fullName>
    <description>Field created for Care Connect intake process, used in the Intake: Care Connect flow</description>
    <label>Next of Kin Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>