DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Next_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Pay_Date__c</fullName>
    <inlineHelpText>Enter the next pay date of the participant</inlineHelpText>
    <label>Next Pay Date</label>
    <type>Date</type>
</CustomField>