DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Past_suicidal_behaviour__c.field-meta.xml
<CustomField>
    <fullName>Past_suicidal_behaviour__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Past suicidal behaviour</inlineHelpText>
    <label>Past suicidal behaviour</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>