DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Receiving_an_Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Receiving_an_Income_Source__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning and Hunter Central Coast</description>
    <inlineHelpText>Are you receiving any money from wages, benefits or elsewhere?</inlineHelpText>
    <label>Receiving an Income Source?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>