DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Recent_present_suicide_ideation__c.field-meta.xml
<CustomField>
    <fullName>Recent_present_suicide_ideation__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Recent/present suicide ideation or behaviour</inlineHelpText>
    <label>Recent/present suicide ideation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>