DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Registered_with_Centrelink_Services_Aus__c.field-meta.xml
<CustomField>
    <fullName>Registered_with_Centrelink_Services_Aus__c</fullName>
    <label>Registered with Centrelink/Services Aus?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>