DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Risk_State__c.field-meta.xml
<CustomField>
    <fullName>Risk_State__c</fullName>
    <description>Created for Care Connect HCC, used in Intake: Care Connect flow</description>
    <inlineHelpText>Risk State: How does the risk compare to other times in the participant’s life when they were at suicide risk?</inlineHelpText>
    <label>Risk State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>