DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <description>Created for Care Connect HCC, used in Intake: Care Connect flow</description>
    <inlineHelpText>Risk Status: How does the risk compare relative to other participants in the program?</inlineHelpText>
    <label>Risk Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>