DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Safety_Plan_Knowledge_and_or_in_place__c.field-meta.xml
<CustomField>
    <fullName>Safety_Plan_Knowledge_and_or_in_place__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning and Hunter Central Coast</description>
    <inlineHelpText>Have you heard of a safety plan, and do you already have one in place?</inlineHelpText>
    <label>Safety Plan Knowledge and/or in place</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>