DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Strengths_and_protective_factors__c.field-meta.xml
<CustomField>
    <fullName>Strengths_and_protective_factors__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Strengths and protective factors</inlineHelpText>
    <label>Strengths and protective factors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>