DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Stressors_precipitants__c.field-meta.xml
<CustomField>
    <fullName>Stressors_precipitants__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Stressors/precipitants</inlineHelpText>
    <label>Stressors/precipitants</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>