DevOps/force-app/main/default/objects/Initial_Assessment__c/fields/Symptoms_suffering_and_recent_changes__c.field-meta.xml
<CustomField>
    <fullName>Symptoms_suffering_and_recent_changes__c</fullName>
    <description>Used in the Intake process for Care Connect Hunter Manning &amp; Care Connect Hunter Central Coast</description>
    <inlineHelpText>Symptoms, suffering and recent changes</inlineHelpText>
    <label>Symptoms, suffering and recent changes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>